packages/dt_for_itables/src/index.css
@import 'datatables.net-dt/css/dataTables.dataTables.min.css';
@import 'datatables.net-buttons-dt/css/buttons.dataTables.min.css';
@import 'datatables.net-colreorder-dt/css/colReorder.dataTables.min.css';
@import 'datatables.net-scroller-dt/css/scroller.dataTables.min.css';
@import 'datatables.net-columncontrol-dt/css/columnControl.dataTables.min.css';
@import 'datatables.net-fixedcolumns-dt/css/fixedColumns.dataTables.min.css';
@import 'datatables.net-fixedheader-dt/css/fixedHeader.dataTables.min.css';
@import 'datatables.net-keytable-dt/css/keyTable.dataTables.min.css';
@import 'datatables.net-rowgroup-dt/css/rowGroup.dataTables.min.css';
@import 'datatables.net-datetime/dist/dataTables.dateTime.min.css';
@import 'datatables.net-searchbuilder-dt/css/searchBuilder.dataTables.min.css';
@import 'datatables.net-searchpanes-dt/css/searchPanes.dataTables.min.css';
@import 'datatables.net-select-dt/css/select.dataTables.min.css';


div.dt-container {
    max-width: 100%;
}

div.dt-layout-table>div {
    overflow: auto;
    max-width: 100%;
}

.itables-dtype {
    font-weight: normal;
}

/* Fix length-menu label spacing (#553) */
div.dt-container .dt-length select.dt-input {
    margin-inline-end: 0.35em;
}

/* Sorting icons on the same side (#535) */
table.dataTable thead > tr > th div.dt-column-header,
table.dataTable thead > tr > td div.dt-column-header,
table.dataTable tfoot > tr > th div.dt-column-footer,
table.dataTable tfoot > tr > td div.dt-column-footer {
    flex-direction: row !important;
}

/* ColumnControl's dropdown search box ships with an empty search icon that
   is only meant to be hidden in the inline (column header) search box - the
   upstream CSS never hides it in the dropdown, so it shows up as a stray,
   unstyled icon between the type select and the input (#536) */
div.dtcc-dropdown div.dtcc-search > div div.dtcc-search-icon {
    display: none;
}

